# Rust-1-Lokaverkefni-B

./: AI_PROMPTS.md  AI_USAGE.md  BUILDING.md  CHECKLIST.md  Cargo.toml  GITHUB_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VIDEO_GUIDE.md  build.rs  equipment.db  equipment.json  gervigreind.md
ai/: commands.md
app_data/: inventory.sqlite3
assets/: README.md
data/: sample.json
migrations/: 001_init.sql
scripts/: gen_app_icons.sh
src/: app.rs  chair.rs  chair_type.rs  database.rs  db.rs  equipment.rs  inventory.rs  location.rs  main.rs  projector.rs  table.rs
src/models/: chair.rs  chair_kind.rs  equipment.rs  house.rs  location.rs  mod.rs  projector.rs  table_item.rs
tests/: location_tests.rs
