[package]
name = "bunadarlisti_tekniskoli"
version = "0.1.0"
edition = "2021"
authors = ["Tækniskólinn - Lokaverkefni B"]
license = "MIT"
description = "Búnaðarlisti Tækniskólans: Rust + egui/eframe + SQLite (rusqlite)."
readme = "README.md"
repository = ""

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["glow"] }
egui = "0.27"
egui_extras = "0.27"
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
dotenvy = "0.15"
once_cell = "1.19"

# Optional, for nice numbers formatting
thousands = "0.2"

[dev-dependencies]
tempfile = "3.10"